--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     position: relative;
-    padding-top: 100px;
+    padding-top: 200px;
 } 
 .footer__filter{
     position: absolute;
@@ -11,7 +11,6 @@
     right: 0;
     z-index: -1;
     background-color:#11111180;
-
 }
 .footer__background {
     position: absolute;
@@ -22,14 +21,10 @@
     z-index: -2;
     width: 100%;
     height: 557px;
-
 }
-
-
 .footer__wrapper {
     display: flex;
     gap: 84px;
-
 }
 .footer__window {
     width: 393px;
@@ -38,28 +33,24 @@
     background: #FFF;
     box-shadow: 0px -5px 20px 0px #00000033;
 
-
 }
 .footer__window-title {
-    color: #2B7AF1;
+    color: $general-color;
     text-align: center;
     font-size: 36px;
     font-weight: 700;
-    padding-top: 40px;
-    
-    
-
+    padding: 40px 10px 0px;
 }
 .footer__window-form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 24px;
+    padding: 24px ;
     gap: 10px;
-
 }
 .footer__window-input {
-    width: 313px;
+    max-width: 313px;
+    width: 100%;
     height: 42px;
     flex-shrink: 0;
     border-radius: 10px;
@@ -71,11 +62,9 @@
     padding: 10px 0px 22% 20px;
     height: 115px;
 }
-
 .footer__window-button{
     margin-top: 14px;
 }
-
 .footer__info {
     position: relative;
     img{
@@ -87,10 +76,9 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    max-width: 710px;   
+    max-width: 710px;
+    width: 100%;   
 }      
-
-
 .footer__info-text {
     font-feature-settings: 'liga' off;
     font-family: Open Sans;
@@ -98,14 +86,12 @@
     font-style: normal;
     font-weight: 400;
     line-height: 140%; 
-
 }
-
 .footer__info-name {
     display: flex;
     flex-direction: column;
 
-    h5{color: #2B7AF1;
+    h5{color: $general-color;
         font-feature-settings: 'liga' off;  
         font-size: 18px;
         font-weight: 700;
@@ -122,13 +108,12 @@
     margin-top: 240px;
     
 }
-
 .nav__text-general--footer::before{
     background: #ffffff;
 }
 .line-footer{
     margin-top: 20px;
-    width: 1280px;
+    width: 100%;
     height: 1px;
     background: #C4C4C4;
 
@@ -141,6 +126,19 @@
     gap: 230px;
     padding-top: 21px;
     padding-bottom: 21px;
+
+    span,p
+    {
+        display: inline-block;
+    }
+}
+.footer-mobail{
+    width: 100%;
+    height:75px;
+
+    position: absolute;
+    bottom: 0px;
+    z-index: -2;
 }
 
 
