--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -156,7 +156,7 @@
     gap: 10px;
 }
 .about-us__icon-num {
-    color: #2B7AF1;
+    color: $general-color;
     font-size: 36px;
     font-weight: 800;
 
@@ -188,13 +188,11 @@
     justify-content: space-between;
     flex-direction: column;
 }
-.contacts__info-app {
-    .contacts__info-title {
-        color:#2B7AF1;
-        font-size: 36px;
-        font-weight: 800;
-        padding-bottom: 50px;
-    }
+.contacts__info-title {
+    color:$general-color;
+    font-size: 36px;
+    font-weight: 800;
+    padding-bottom: 50px;
 }
 .contacts__info-bloc-app {
     display: flex;
@@ -271,7 +269,7 @@
     padding: 40px;
     width: 100%;
     height: 649px;
-    background: #2B7AF1;
+    background: $general-color;
 }
 .container--reviews{
     padding: 0 30px 0 ;
@@ -284,28 +282,31 @@
     font-weight: 800;
     line-height: 130%;
 }
-.reviews__swiper{
+
+.reviews__wrapper{
     position: relative;
 }
+
 .reviews__next,
 .reviews__prev{
     cursor: pointer;
     position: absolute;
-    top: 150px;
-    right: 1px;
-    z-index: 2;
+    top: 155px;
+    z-index: 4;
     
 }
 .reviews__next {
-    right: 1px;
+    right:-40px;
 }
 .reviews__prev {
-    left: 1px;
+    left: -40px;
 }
 
 .reviews__swiper-wrapper {
     padding-top: 50px;
+    display: flex;
 }
+
 .reviews__slide {
     display: grid;
     grid-template-columns:2fr 1fr 2fr;
@@ -316,10 +317,11 @@
     height: 292px;
     border-radius: 10px;
     background: #FFF;
+    overflow:visible ;
 }
 .reviews__slide-title {
     grid-column: 1/3;
-    color:#2B7AF1;
+    color:$general-color;
     font-size: 20px;
     font-weight: 700;
 }
@@ -342,7 +344,7 @@
     align-self:flex-end;
 }
 .reviews__slide-name {
-    color: #2B7AF1;
+    color: $general-color;
     font-size: 14px;
     font-weight: 700;
     line-height: 130%;
@@ -363,7 +365,9 @@
     font-weight: 500;
 }
 .reviews__pagination{
-    padding: 60px 31.1vw;
+    display: flex;
+    justify-content: center;
+    padding-top: 60px;
 }
 .swiper-pagination-bullet{
     width: 10px;
