--- a/css/style.css
+++ b/css/style.css
@@ -143,30 +143,6 @@ html {
   z-index: 1;
 }
 
-.nav__list-circle {
-  position: absolute;
-  bottom: -11px;
-  left: -10px;
-  z-index: -1;
-  width: 40px;
-  height: 40px;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
-  border-radius: 50%;
-  background: #ffffff;
-}
-
-.nav__list-contact-mail,
-.nav__list-contact-tell {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 10px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
 .nav__list-cosial {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1130,7 +1106,7 @@ html {
 
 .footer-mobail {
   width: 100%;
-  height: 75px;
+  height: 65px;
   position: absolute;
   bottom: 0px;
   z-index: -2;
@@ -1463,13 +1439,10 @@ html {
 }
 @media (max-width: 930px) {
   .nav__list-img img {
-    width: 15px;
-  }
-  .nav__list-circle {
-    bottom: -6px;
-    left: -8px;
     width: 30px;
-    height: 30px;
+  }
+  .nav__list-contact {
+    gap: 14px;
   }
   .nav__list-contact .button {
     width: 145px;
@@ -1737,13 +1710,15 @@ html {
   .footer__background,
   .nav__list-contact--footer,
   .nav__list-cosial-item,
+  .line-footer,
   .footer__Copyright {
     display: none;
   }
   .nav--footer {
     margin-top: 100px;
+    margin-bottom: 10px;
   }
-  .nav__list-mobail {
+  .nav__list-mobail--footer {
     background-color: #ffffff;
     padding: 9px 13px 4px 13px;
     border-radius: 5px;
